# ipm_ros

src/ipm/: CMakeLists.txt  package.xml
src/ipm/cfg/: camera_extrinsic_param.cfg
src/ipm/launch/: camera.launch  ipm_node.launch
src/ipm/src/: ipm.cpp  ipm.h  ipm_node.cpp
